# ChangeLog for net-misc/netstat-nat
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/netstat-nat/ChangeLog,v 1.11 2004/07/01 21:39:02 squinky86 Exp $

  01 Jul 2004; Jon Hood <squinky86@gentoo.org> netstat-nat-1.3.1.ebuild,
  netstat-nat-1.4.2.ebuild, netstat-nat-1.4.3.ebuild:
  change virtual/glibc to virtual/libc, add IUSE

  16 Apr 2004; Jason Wever <weeve@gentoo.org> netstat-nat-1.4.3.ebuild:
  Added ~sparc keyword.

  23 Mar 2004; Martin Holzer <mholzer@gentoo.org> netstat-nat-1.3.1.ebuild,
  netstat-nat-1.4.2.ebuild, netstat-nat-1.4.3.ebuild:
  fixing depend qa issue. see 45343.

*netstat-nat-1.4.3 (08 Oct 2003)

  08 Oct 2003; Martin Holzer <mholzer@gentoo.org> netstat-nat-1.4.3.ebuild:
  Version bumped.

*netstat-nat-1.4.2 (04 Aug 2003)

  04 Aug 2003; Martin Holzer <mholzer@gentoo.org> netstat-nat-1.4.2.ebuild:
  Version bumped.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*netstat-nat-1.3.1 (14 Aug 2002)

  14 Aug 2002; Maik Schreiber <blizzy@gentoo.org> : New version.
  Closes bug #6392.

*netstat-nat-1.3 (04 Aug 2002)

  04 Aug 2002; Maik Schreiber <blizzy@gentoo.org> : Initial import.
  ebuild was written by me (blizzy).