@@ -1,3 +1,16 @@
-MD5 002ac790b3ef2b9f898c8785d03370e6 ChangeLog 1255
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 3315d967dff9c44d5b263a86046ebff7 ChangeLog 1503
+MD5 4cea8c420449e7a3ee23082d868afe61 netstat-nat-1.4.4.ebuild 530
+MD5 d7d705735af1299707ee38eb80d1b762 metadata.xml 268
 MD5 1d1a49614cb63405a0df36eda7794b35 netstat-nat-1.4.3.ebuild 729
+MD5 d343abd418e03d7c6c8b12df8f6cdc52 files/digest-netstat-nat-1.4.4 68
 MD5 85638fd0d03d4e003b51af32d70eb526 files/digest-netstat-nat-1.4.3 68
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.0 (GNU/Linux)
+
+iD8DBQFB9gLpmdTrptrqvGERAjfsAJ9E5F8rmXB822MB/pIef7PfJk3mYgCePI1D
+uRJvOu1F5YDz+tDb7cpILfE=
+=gQso
+-----END PGP SIGNATURE-----
