@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/netstat-nat
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/netstat-nat/ChangeLog,v 1.11 2004/07/01 21:39:02 squinky86 Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/netstat-nat/ChangeLog,v 1.12 2005/01/25 08:27:15 dragonheart Exp $
+
+*netstat-nat-1.4.4 (25 Jan 2005)
+
+  25 Jan 2005; Daniel Black <dragonheart@gentoo.org>
+  +netstat-nat-1.4.4.ebuild, +metadata.xml:
+  version bump prompted by bug #74775. Thanks to  Matthew Sutton 
+  <msutton@circletgsc.org>. ~ppc keyword added.
 
   01 Jul 2004; Jon Hood <squinky86@gentoo.org> netstat-nat-1.3.1.ebuild,
   netstat-nat-1.4.2.ebuild, netstat-nat-1.4.3.ebuild:
